2012-02-25  Felix Ingrand  <felix@cturtle>

	* Makefile.am (DIST_ANNEX_FILES): renamed the gtk icon files.
	(%-lex.h): added a rule to also make the .h for lex parsers.

	* many files: cleanup include not really needed. Added declaration
	to remove compiler warnings.

2012-02-22  Felix Ingrand  <felix@cturtle>

	* goprs-main.c (oprs_main): replace start_kernel_user_hook with start_kernel_hook.

	* goprs-main.c (oprs_main) gope-main.c (main) Makefile.am : now put the icons inline in the code for gope and goprs.

	* goprs-main.c: Make the icon intern to the program.

2012-02-21  Felix Ingrand  <felix@cturtle>

	* openprs-util.pc.in (prefix): Separate openprs.pc and openprs-util.pc

	* Makefile.am (oprs_LDADD): -export-dynamic is only needed for oprs and xoprs... a priori.

2012-02-17  Felix Ingrand  <felix@cturtle>

	* send-message.c: .h include cleanup.

	* mp-register.c: .h include cleanup.

2012-02-16  Felix Ingrand  <felix@cturtle>

	* Makefile.am: added AM_LDFLAGS = -export-dynamic . This seems to solve my problem of symbols not properly found after
	lt_dlsym had linked one of my user code loading function. This is still a mistery to me... and will need a dl expert to
	explain me why this was working for some functions and not other (even if they were in the same file...).

2012-02-15  Felix Ingrand  <felix@cturtle>

	* ltdl-loader.c: Code to load external dl (from ev-function.c).

	* oprs-parser.y.part: Added commands to the parser to load actions, evaluable functions and predicates. ex:
		load action "user-action-example"
		load evaluable function "user-ev-function-example"
		load evaluable predicate "user-ev-predicate-example"

	* user-ev-function.c user-action.c user-ev-predicate.c: Example of dynamic loading of actions, functions and predicates.

	* ev-function.c: Added ltdl code to load actions, evaluable functions and predicates.

2011-09-08  Francois Felix Ingrand  <felix@ingrand.net>
