@@ -3,7 +3,7 @@
  *
  * $Id$
  *
- * Copyright (c) 1991-2011 Francois Felix Ingrand, LAAS/CNRS.
+ * Copyright (c) 1991-2012 Francois Felix Ingrand, LAAS/CNRS.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -92,7 +92,7 @@ typedef enum {
      MAX_DRAW_MODE
 }    Draw_Mode;
 
-PString mode_help[MAX_DRAW_MODE];
+extern PString mode_help[MAX_DRAW_MODE];
 
 /* Enumeration of the Text Field type */
 typedef enum {
